--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest -e ci/ci_tools
+        pip install pytest -e . -e ci/ci_tools
     - name: Validate Table of Contents
       run: python -m pytest --verbose ci/ci_tools/ci_tools/documentation/validate_toc.py
     - name: Build Jupyter Book
