--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: OAF Workshop
 only_build_toc_files: true
 execute:
-    execute_notebooks: auto
+    execute_notebooks: force
     timeout: 30
 sphinx:
     config:
@@ -11,7 +11,8 @@ sphinx:
                 - fmt: py:percent
         suppress_warnings:
             - ref.myst
+            - mystnb.unknown_mime_type
 exclude_patterns:
   - '.pytest_cache'
   - '**/.pytest_cache'
-  
+  - 'ENV'   
