Workshop 2: Lens Model
Adding second workshop.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: OAF Workshop
 only_build_toc_files: true
 execute:
     execute_notebooks: force
-    timeout: 30
+    timeout: 90
 sphinx:
     config:
         nb_custom_formats:
@@ -13,6 +13,13 @@ sphinx:
             - ref.myst
             - mystnb.unknown_mime_type
 exclude_patterns:
-  - '.pytest_cache'
-  - '**/.pytest_cache'
-  - 'ENV'   
+  - ".pytest_cache"
+  - "**/.pytest_cache"
+  - "ENV"
+thebe:
+  activate: true
+  binderhub_url: "https://mybinder.org"
+  repository_url: "https://github.com/martvald/oaf-3d-vision-pipeline-workshop"
+  branch: "main"
+launch_buttons:
+    thebe: true
