--- a/_toc.yml
+++ b/_toc.yml
@@ -5,6 +5,7 @@ chapters:
   sections:
   - file: workshops/01_introduction_to_3d_vision
   - file: workshops/02_understanding_camera_models
+  - file: workshops/03_image_distortion_and_undistortion
 - file: oaf_vision_3d/module
   sections:
   - file: oaf_vision_3d/lens_model
