--- a/_toc.yml
+++ b/_toc.yml
@@ -6,6 +6,7 @@ chapters:
   - file: workshops/01_introduction_to_3d_vision
   - file: workshops/02_understanding_camera_models
   - file: workshops/03_image_distortion_and_undistortion
+  - file: workshops/04_3d_2d_projections_and_pnp
 - file: oaf_vision_3d/module
   sections:
   - file: oaf_vision_3d/lens_model
