--- a/_toc.yml
+++ b/_toc.yml
@@ -8,8 +8,10 @@ chapters:
   - file: workshops/03_image_distortion_and_undistortion
   - file: workshops/04_3d_2d_projections_and_pnp
   - file: workshops/05_dual_camera_setups
+  - file: workshops/06_stereo_matching_fundamentals
 - file: oaf_vision_3d/module
   sections:
   - file: oaf_vision_3d/lens_model
   - file: oaf_vision_3d/transformation_matrix
   - file: oaf_vision_3d/project_points
+  - file: oaf_vision_3d/triangulation
