--- a/_toc.yml
+++ b/_toc.yml
@@ -9,9 +9,11 @@ chapters:
   - file: workshops/04_3d_2d_projections_and_pnp
   - file: workshops/05_dual_camera_setups
   - file: workshops/06_stereo_matching_fundamentals
+  - file: workshops/07_stereo_matching_fundamentals_continued
 - file: oaf_vision_3d/module
   sections:
   - file: oaf_vision_3d/lens_model
   - file: oaf_vision_3d/transformation_matrix
+  - file: oaf_vision_3d/poly_2_subvalue_fit
   - file: oaf_vision_3d/project_points
   - file: oaf_vision_3d/triangulation
