Workshop 8: Building Your 3D Vision Pipeline

--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -3,6 +3,8 @@ on: [pull_request, workflow_dispatch]
 jobs:
   all_tests:
     name: All Tests
+    env:
+      CI: true
     runs-on: ubuntu-latest
     strategy:
       matrix:
