--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,6 +3,8 @@ on: [pull_request, workflow_dispatch]
 jobs:
   jupyter_book:
     name: Jupyter Book
+    env:
+      CI: true
     runs-on: ubuntu-latest
     strategy:
       matrix:
