--- a/.github/workflows/publish_book.yml
+++ b/.github/workflows/publish_book.yml
@@ -10,6 +10,8 @@ permissions:
 jobs:
   jupyter_book:
     name: Jupyter Book
+    env:
+      CI: true
     runs-on: ubuntu-latest
     strategy:
       matrix:
